Update the generation sample code for chat model

--- a/Notebook/generation_sample_code.ipynb
+++ b/Notebook/generation_sample_code.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75a2bae2f773423499b260c4d2d37b8f",
+       "model_id": "12c5943e5597458ca53c715688f1b1c8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17c4d06b914440d0834f80d9de428e16",
+       "model_id": "33044444775644d3a4cae4c0b7aa82ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -274,7 +274,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Taigi-Llama-2-Chat Series: A Comprehensive Chat Model for Taigi (To be completed soon)"
+    "## Taigi-Llama-2-Chat Series: A Comprehensive Chat Model for Taigi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Detected kernel version 3.10.0, which is below the recommended minimum of 5.5.0; this can cause the process to hang. It is recommended to upgrade the kernel to the minimum version or higher.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b17d0af17fe14a539e9360c82e92077a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "model_dir = \"Bohanlu/Taigi-Llama-2-Chat-7B\" # or Bohanlu/Taigi-Llama-2-Chat-13B for the 13B model\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_dir, use_fast=False)\n",
+    "\n",
+    "accelerator = accelerate.Accelerator()\n",
+    "pipe = get_pipeline(model_dir, tokenizer, accelerator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' 做一欉千年老樹，佇青翠的森林中安養天年，雄雄一陣剉樹仔的人衝過來欲共我剉掉，這陣我心肝頭會真毋甘、真袂慣勢。\\n\\n頭先，我感覺真無歡喜佮袂慣勢。我佇遮徛幾若百年矣，早就成做森林的一部份，予人當做是寶物咧保護。今仔日煞有人來破壞我的安寧，予我感覺足無公平閣艱苦。\\n\\n閣來，我煩惱家己的性命會結束。做一欉大樹，我的性命佮森林是相黏牢的。當我予人剉掉的時陣，嘛代表規个森林生態系統的破壞。我驚惶森林的生物會失去我的庇護，面對生存危機。\\n\\n毋過，我嘛知影這个世界一直攏咧改變，人類嘛一直咧發展。佇面對改變的時陣，咱愛保持彈性佮適應力。我希望人會當尊重大自然的法則，保護生態系統，予地球會當永續發展。\\n\\n總講一句，我希望人會當理解樹仔對生態系統的重要性，嘛愛尊重大自然的平衡。我雖然是樹仔，嘛是生態系統的一份子，我希望所有的生物攏會當和平共存，做伙維護這个媠閣可愛的地球。 '"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Single round\n",
+    "messages = [\n",
+    "    {\"role\": \"user\", \"content\": \"你做一个百歲老樹，佇青翠的森林內底，安養天年，雄雄一陣剉樹仔的人衝過來欲共你剉掉，按呢你會有啥物款的心情？\"},\n",
+    "]\n",
+    "\n",
+    "pipe(messages, return_full_text=False, repetition_penalty=1.05, do_sample=True)[0]['generated_text']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' 做一欉千年老樹，我深知森林對生態系的重要性，嘛了解人類佮大自然之間的互相影響。為著拯救森林，我提出下列幾點建議，向望會當說服剉樹仔的人停手莫閣剉矣：\\n\\n1. 永續林業：推廣永續林業的理念，透過合理的砍伐佮種樹計畫，維持森林的生態平衡。予森林佇會當繼續發展的前提之下，提供資源予人類使用。\\n2. 生態觀光：開發森林生態觀光，予遊客體驗森林的美麗，同時也增加當地居民的收入。按呢會使減少剉樹仔的壓力，同時也會當保護森林的環境。\\n3. 種樹造林：鼓勵人佇都市抑是廢墟的土地頂懸種樹仔，來恢復森林的面積。毋但會當美化環境，閣會當改善空氣的品質，調節氣候。\\n4. 加強森林保護：建立森林保護區，限制人入去森林採集資源，禁止違法剉樹仔。政府佮民間愛共同拍拚，加強對森林的保護。\\n5. 教育佮宣導：透過教育佮宣導，提高民眾對森林生態的重要性認捌。予閣較濟人了解森林對人類的重要性，從而支持保護森林的行動。\\n6. 科技創新：利用科技創新，研發較環保的木材加工技術，降低對森林資源的損耗。同時，嘛會使開發再生能源，親像太陽能、風力發電等等，來代替對森林資源的依賴。\\n\\n透過遮的建議，我希望會當喚起人的意識，予𪜶知影保護森林的重要。我相信，只要人會當理解大自然的平衡佮永續發展的重要性，就一定會停止剉樹仔的行為，做伙來保護這个美麗的地球。 '"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Multiple rounds\n",
+    "messages = [\n",
+    "    {\"role\": \"user\", \"content\": \"你做一个百歲老樹，佇青翠的森林內底，安養天年，雄雄一陣剉樹仔的人衝過來欲共你剉掉，按呢你會有啥物款的心情？\"},\n",
+    "    {\"role\": \"assistant\", \"content\": \"做一欉千年老樹，佇青翠的森林中安養天年，雄雄一陣剉樹仔的人衝過來欲共我剉掉，這陣我心肝頭會真毋甘、真袂慣勢。\\n\\n頭先，我感覺真無歡喜佮袂慣勢。我佇遮徛幾若百年矣，早就成做森林的一部份，予人當做是寶物咧保護。今仔日煞有人來破壞我的安寧，予我感覺足無公平閣艱苦。\\n\\n閣來，我煩惱家己的性命會結束。做一欉大樹，我的性命佮森林是相黏牢的。當我予人剉掉的時陣，嘛代表規个森林生態系統的破壞。我驚惶森林的生物會失去我的庇護，面對生存危機。\\n\\n毋過，我嘛知影這个世界一直攏咧改變，人類嘛一直咧發展。佇面對改變的時陣，咱愛保持彈性佮適應力。我希望人會當尊重大自然的法則，保護生態系統，予地球會當永續發展。\\n\\n總講一句，我希望人會當理解樹仔對生態系統的重要性，嘛愛尊重大自然的平衡。我雖然是樹仔，嘛是生態系統的一份子，我希望所有的生物攏會當和平共存，做伙維護這个媠閣可愛的地球。\"},\n",
+    "    {\"role\": \"user\", \"content\": \"提出挽救森林的方案，來說服剉樹仔的人停手莫閣剉矣。\"},\n",
+    "]\n",
+    "\n",
+    "pipe(messages, return_full_text=False, repetition_penalty=1.05, do_sample=True)[0]['generated_text']"
    ]
   }
  ],
